{
    "name": "EditorInput",
    "maps": [
        {
            "name": "Editor",
            "id": "04bed837-9914-43e0-a94b-0805bf19d8f9",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "3bb1c5c6-94dd-4238-97a8-77af29dd3db9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6025dcc7-9428-42d0-b843-66bdaa21b130",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom1",
                    "type": "Value",
                    "id": "5c1da74e-1da4-4f80-a467-3e1bebeeb5a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom2",
                    "type": "Value",
                    "id": "d1042a0d-30db-4415-944c-7042aa970e1d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseZoom",
                    "type": "Value",
                    "id": "6ba61505-2a21-45ac-afdd-0c587a36aa73",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "27cc0778-d176-4e64-8fb8-d7e2029b3d24",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60c4585c-115b-4a81-b988-810228719bcd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18b69171-4e2e-4e67-9857-7cf31958a4fc",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "17c2d539-16b2-43a1-bd66-fdc0e0c3469e",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "ceb295c8-bf90-46da-8ef1-34b411742ca8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "669534de-4de2-4c98-bf89-f57192210e3b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3395e165-9430-4e0f-9a9d-f2b42d3f55de",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4912eee6-039a-4ed8-94cb-02237c5310f0",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "365f65ff-6ccd-4de5-a109-771e72437854",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}